assets/css/main.css
/* ... */
.region-selector .fa-caret-down {
  padding-left: 10px;
}

.btn-group.region-selector li > a {
  color: #428bca;
  font-size: 16px;
}

.btn-group.region-selector li > a:hover {
  background-color: #585858;
  color: white;
}

.btn-group.region-selector .dropdown-header {
  font-size: 16px;
  font-weight: bolder;
  color: #333333;
}

.resource-row  .resource-header-row{
  padding:0;
}

.top-buffer {
  margin-top:85px
}

#resources-jumbo {
  margin-bottom: 0px;
}

#dashboard-jumbo h1 {
  margin: 5px auto;
}

#dashboard-jumbo {
  margin-bottom: 0px;
}

.circle {
  border-radius: 50%;
  width: 200px;
  height: 200px; 
  margin: 0 auto;
  margin-bottom:20px;
}

.circle.person-circle, .circle.overlay-circle {
  width: 160px;
  height: 160px; 
  margin-bottom:5px;
}

.overlay-circle {
  opacity: .5;
  position:absolute;
  z-index:20;
  top:0px;
  display: none;
}

.person-circle {
  position:relative;
  z-index: 1;
}

.reap-faculty .zero-buffer {
  padding: 0px;
  margin: 0px;
}

.person-holder {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
  text-align: center;
  position: relative;
  display:block;
  width:160px;
}

.person-img {
  width:140px;
  height:140px;
  position:absolute;
  top:10px;
  z-index: 10;
  left:10px;
}

.name-label {
  position:absolute;
  display: none;
  z-index:30;
  top: 50px;
  width:90%;
  left:5%;
}

.person-caption {
  font-size:16px;
}

.resource-panel .reap-faculty {
  margin-left:auto;
  margin-right:auto;
}

.resource-panel .initially-hidden{
  display:none;
}

div.content-row {
	margin-right:auto;
	margin-left:auto;
	margin-top:50px;
	margin-bottom:50px;
	text-align: center;
}

.navbar {
	margin-bottom:0px !important;
}

.navbar-banner {
  margin-right:25px;
  width: 100%;
  text-align: right;
}

.navbar-banner > a{
  color:red;
  font-size:14px;
}

.navbar-brand {
	padding-top:10px !important;
	padding-bottom:0px !important;
}
 
.navbar-link {
	margin-top:16px;
	font-size: 16px;
}

@media (max-width: 900px) { 
  /* minimize gap between the logo and the top nav bar for small screen sizes
  i.e. when the navbar appears under the logo */
  .navbar-link {
    margin-top:0px;
  }  
}

h2, h3 {
	margin-top:-10px !important;
	font-family: whitney_htflight_condensed !important;
}

h4 {
	font-family: whitney_htflight_condensed !important;
}

h1 {
	font-family: whitney_htflight_condensed, bolder !important;
}

.main-country-title {
	padding-top: 40px;
	font-family: whitney_htflight_condensed !important;
	letter-spacing: 5px;
	text-align: center;
	margin:auto !important;
	position:relative;
	color:white;
	padding-bottom:10px;
}

.light-blue-reap {
	background-color: rgb(59,178,203);
}

.pink-reap {
	background-color: rgb(192,84,140);
}

.dark-blue-reap {
	background-color: rgb(37,132,184);
}

.chart-blue-reap {
  background-color: #428bca;
}

.red-reap {
	background-color: rgb(183,20,96);
}

.gray-reap {
	background-color: rgb(47,43,40);
}

.center-txt {
	text-align: center;
	padding-bottom:20px;
}

.padded-header {
	padding-top:45px;
	font-weight: bolder;
}

.white-title {
	color:white;
	font-family: whitney_htflight_condensed;
	margin-top:0px;
}

.no-padding-bottom {
	margin-bottom:0px;
	padding-bottom:0px;
}

.less-padding-bottom {
	margin-bottom: 10px;
}

.more-padding-graph {
	margin-top:15px;
	margin-bottom:37px;
}

.search-input {
	position:relative;
	top:4px;
}

#reaplogo {
  height:65px;
  position:relative;
  top:-5px;
}

#reaplogo-small {
  height:40px;
  position:relative;
  top:-5px;
}

#navbar-brand-sm {
  display: none;
}

.navbar-shrink .navbar-banner, .navbar-shrink #navbar-brand-lg {
  display: none;
}

.navbar-shrink #navbar-brand-sm {
  display: block;
} 

#reap-navbar .navbar-link {
  padding: 5px 12px;
}

#reap-navbar .active>a, #reap-navbar .active>a:hover {
  background: rgb(192,84,140);
  color: white;
  border-radius: 5px;
  font-weight: bold;
  cursor: default;
}

#reap-navbar a:hover {
  background: #dddddd;
  border-radius: 5px;
  font-weight: bold;
  color: rgb(192,84,140);
}

#reap-navbar {
  margin-right: 10px;
  margin-left: 10px;
}

.padded-contact {
	margin-top:20px !important;
	margin-bottom:20px !important;
}

.center-div {
	margin: auto !important;
	padding-bottom: 40px;
	height:500px !important;
}

a.no-decorate-link {
	color:white !important;
}

.buffer-top {
	height:80px;
}

.flash-msg {
	text-align: center;
}

.why-circle {
	margin-right: 30px;
	width:180px;
}

.bulleted-list {
	text-align:left;
}


/*! normalize.css v2.1.3 | MIT License | git.io/normalize */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
summary {
  display: block; }

audio,
canvas,
video {
  display: inline-block; }

audio:not([controls]) {
  display: none;
  height: 0; }

[hidden],
template {
  display: none; }

html {
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%; }

body {
  margin: 0; }

a {
  background: transparent; }

a:focus {
  outline: thin dotted; }

a:active,
a:hover {
  outline: 0; }

h1 {
  font-size: 2em;
  margin: 0.67em 0; }

abbr[title] {
  border-bottom: 1px dotted; }

b,
strong {
  font-weight: bold; }

dfn {
  font-style: italic; }

hr {
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  height: 0; }

mark {
  background: #ff0;
  color: #000; }

code,
kbd,
pre,
samp {
  font-family: monospace, serif;
  font-size: 1em; }

pre {
  white-space: pre-wrap; }

q {
  quotes: "\201C" "\201D" "\2018" "\2019"; }

small {
  font-size: 80%; }

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline; }

sup {
  top: -0.5em; }

sub {
  bottom: -0.25em; }

img {
  border: 0; }

svg:not(:root) {
  overflow: hidden; }

figure {
  margin: 0; }

fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em; }

legend {
  border: 0;
  padding: 0; }

button,
input,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  margin: 0; }
/* ... */

